<resources>
    <string name="app_name">Psycho</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="test_lyusher">Тест Люшера</string>
    <string name="test_mood_eval">Тествопросник «Оценка настроения»</string>
    <string name="start_test">Начать тест</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="conversely">Наоборот</string>
    <string name="your_name">Ваше имя:</string>
    <string name="notes">Заметка к тесту</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="name">Name</string>
    <string name="welcome">Ни для кого не секрет, что психическое здоровье не менее важно, чем физическое. Увы, но современный ритм жизни – это настоящее испытание для любого человека. Постоянные стрессы, недосыпание, неправильное питание, плохая экология – все оставляет свой след. А здорова ли Ваша психика? Давайте попробуем узнать. Для того чтобы определить, в каком состоянии находится Ваша психика , Вам предлагается пройти несколько тестов. На вопросы тестов нужно отвечать не задумываясь, первое, что пришло в голову.</string>
    <string name="start_test">Начать тест</string>
    <string name="save_results">Сохранить результаты</string>
    <string name="end_test">Завершить тест</string>

</resources>
